--- a/gton/docker-compose.yml
+++ b/gton/docker-compose.yml
@@ -1,4 +1,13 @@
-version: '1.0'
+version: '3.4'
+
+x-system-addr-env: &system-addr-env
+  # private key: a6aecc98b63bafb0de3b29ae9964b14acb4086057808be29f90150214ebd4a0f
+  # OK to publish this since it will only ever be used in itests
+  SYSTEM_ADDRESS_0_DEPLOYER: '0xa961b0d6dce82db098cf70a42a14add3ee3db2d5'
+
+  # private key: 3b8d2345102cce2443acb240db6e87c8edd4bb3f821b17fab8ea2c9da08ea132
+  # OK to publish this since it will only ever be used in itests
+  SYSTEM_ADDRESS_1_DEPLOYER: '0xdfc82d475833a50de90c642770f34a9db7deb725'
 
 services:
   deployer:
