--- a/gton/docker-compose.yml
+++ b/gton/docker-compose.yml
@@ -51,6 +51,8 @@ services:
       DATA_TRANSPORT_LAYER__L2_CHAIN_ID: ${L2_CHAIN_ID}
     ports:
       - ${DTL_PORT:-7878}:7878
+    volumes:
+      - "./data/dtl:/db/"
 
   l2geth:
     depends_on:
@@ -82,6 +84,8 @@ services:
     ports:
       - ${L2GETH_HTTP_PORT:-8545}:8545
       - ${L2GETH_WS_PORT:-8546}:8546
+    volumes:
+      - "./data/geth:/root/.ethereum"
 
   relayer:
     depends_on:
