--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -1,5 +1,5 @@
 # Name for the network to deploy to ("mainnet", "kovan", etc.)
-CONTRACTS_TARGET_NETWORK=
+CONTRACTS_TARGET_NETWORK=bscTestnet
 
 # Private key that will send deployment transactions
 CONTRACTS_DEPLOYER_KEY=
@@ -9,3 +9,4 @@ CONTRACTS_RPC_URL=
 
 # Your Etherscan API key for the L1 network
 ETHERSCAN_API_KEY=
+BSCSCAN_API_KEY=
