--- a/gton/docker-compose.yml
+++ b/gton/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     ports:
       - ${DTL_PORT:-7878}:7878
     volumes:
-      - "./data/dtl:/db/"
+      - './data/dtl:/db/'
 
   l2geth:
     depends_on:
@@ -85,7 +85,7 @@ services:
       - ${L2GETH_HTTP_PORT:-8545}:8545
       - ${L2GETH_WS_PORT:-8546}:8546
     volumes:
-      - "./data/geth:/root/.ethereum"
+      - './data/geth:/root/.ethereum'
 
   relayer:
     depends_on:
@@ -150,7 +150,7 @@ services:
 
   gas_oracle:
     deploy:
-      replicas: 0
+      replicas: 1
     build:
       context: ..
       dockerfile: ./gas-oracle/Dockerfile
@@ -160,6 +160,7 @@ services:
       GAS_PRICE_ORACLE_LAYER_TWO_HTTP_URL: http://l2geth:8545
       # Default hardhat account 5
       GAS_PRICE_ORACLE_PRIVATE_KEY: ${GAS_ORACLE_PRIVATE_KEY}
+      GAS_PRICE_ORACLE_CHAIN_ID: ${L1_CHAIN_ID}
 
   batch_submitter:
     depends_on:
