--- a/gton/envs/dtl.env
+++ b/gton/envs/dtl.env
@@ -3,14 +3,21 @@ DATA_TRANSPORT_LAYER__SYNC_FROM_L2=false
 DATA_TRANSPORT_LAYER__DB_PATH=/db
 DATA_TRANSPORT_LAYER__SERVER_PORT=7878
 DATA_TRANSPORT_LAYER__TRANSACTIONS_PER_POLLING_INTERVAL=1000
-DATA_TRANSPORT_LAYER__CONFIRMATIONS=0
-DATA_TRANSPORT_LAYER__POLLING_INTERVAL=100
+DATA_TRANSPORT_LAYER__CONFIRMATIONS=12
+DATA_TRANSPORT_LAYER__POLLING_INTERVAL=500
 DATA_TRANSPORT_LAYER__LOGS_PER_POLLING_INTERVAL=2000
 DATA_TRANSPORT_LAYER__DANGEROUSLY_CATCH_ALL_ERRORS=true
 DATA_TRANSPORT_LAYER__SERVER_HOSTNAME=0.0.0.0
 DATA_TRANSPORT_LAYER__L1_START_HEIGHT=${L1_START_HEIGHT}
+DATA_TRANSPORT_LAYER__ETH_NETWORK_NAME=testnet
 
 DATA_TRANSPORT_LAYER__ADDRESS_MANAGER=${ADDRESS_MANAGER}
 DATA_TRANSPORT_LAYER__L1_RPC_ENDPOINT=${L1_RPC_ENDPOINT}
 DATA_TRANSPORT_LAYER__L2_RPC_ENDPOINT=${L2_RPC_ENDPOINT}
 DATA_TRANSPORT_LAYER__L2_CHAIN_ID=${L2_CHAIN_ID}
+
+# Added from replica setup
+DATA_TRANSPORT_LAYER__DEFAULT_BACKEND=l2
+DATA_TRANSPORT_LAYER__L1_GAS_PRICE_BACKEND=l2
+DATA_TRANSPORT_LAYER__NODE_ENV=production
+DATA_TRANSPORT_LAYER__SENTRY_TRACE_RATE=0.05
