--- a/gton-old/envs/metrics.env
+++ b/gton-old/envs/metrics.env
@@ -1,3 +1,3 @@
-GF_SECURITY_ADMIN_PASSWORD=optimism
+GF_SECURITY_ADMIN_PASSWORD=${GF_ADMIN_PASSWORD}
 INFLUXDB_HTTP_AUTH_ENABLED=false
 INFLUXDB_DB=l2geth
