chore: add env to set berlin block num

--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -10,3 +10,6 @@ CONTRACTS_RPC_URL=
 # Your Etherscan API key for the L1 network
 ETHERSCAN_API_KEY=
 BSCSCAN_API_KEY=
+
+# Your Berlin block number
+L1_BERLIN_BLOCK=
