--- a/gton/docker-compose.yml
+++ b/gton/docker-compose.yml
@@ -10,26 +10,8 @@ x-system-addr-env: &system-addr-env
   SYSTEM_ADDRESS_1_DEPLOYER: '0xdfc82d475833a50de90c642770f34a9db7deb725'
 
 services:
-  deployer:
-    build:
-      context: ..
-      dockerfile: ./gton/docker/Dockerfile.packages
-      target: deployer
-    image: ethereumoptimism/deployer:${DOCKER_TAG_DEPLOYER:-latest}
-    entrypoint: ./deployer.sh
-    environment:
-      # Env vars for the deployment script.
-      CONTRACTS_RPC_URL: ${L1_RPC_ENDPOINT}
-      CONTRACTS_DEPLOYER_KEY: ${CONTRACTS_DEPLOYER_KEY}
-      CONTRACTS_TARGET_NETWORK: ${CONTRACTS_TARGET_NETWORK}
-      DEPLOYER_BERLIN_BLOCK: ${DEPLOYER_BERLIN_BLOCK}
-    ports:
-      # expose the service to the host for getting the contract addrs
-      - ${DEPLOYER_PORT:-8080}:8081
-
   dtl:
     depends_on:
-      - deployer
       - l2geth
     build:
       context: ..
@@ -44,7 +26,7 @@ services:
     # depend on the docker-compose setup
     environment:
       # used for setting the address manager address
-      URL: http://deployer:8081/addresses.json
+      URL: ${GTON_ADDRESSES_URL}
       # connect to the 2 layers
       DATA_TRANSPORT_LAYER__L1_RPC_ENDPOINT: ${DTL_RPC_ENDPOINT}
       DATA_TRANSPORT_LAYER__L2_RPC_ENDPOINT: http://l2geth:8545
@@ -56,8 +38,6 @@ services:
       - './data/dtl:/db/'
 
   l2geth:
-    depends_on:
-      - deployer
     build:
       context: ..
       dockerfile: ./l2geth/Dockerfile
@@ -70,7 +50,7 @@ services:
       <<: *system-addr-env
       ETH1_HTTP: ${L1_RPC_ENDPOINT}
       ROLLUP_TIMESTAMP_REFRESH: 5s
-      ROLLUP_STATE_DUMP_PATH: http://deployer:8081/state-dump.latest.json
+      ROLLUP_STATE_DUMP_PATH: ${GTON_GENESIS_URL}
       # connecting to the DTL
       ROLLUP_CLIENT_HTTP: http://dtl:7878
       ETH1_CTC_DEPLOYMENT_HEIGHT: ${L1_START_HEIGHT}
@@ -123,7 +103,6 @@ services:
 
   verifier:
     depends_on:
-      - deployer
       - dtl
       - l2geth
     deploy:
@@ -139,7 +118,7 @@ services:
       <<: *system-addr-env
       ETH1_HTTP: ${L1_RPC_ENDPOINT}
       SEQUENCER_CLIENT_HTTP: http://l2geth:8545
-      ROLLUP_STATE_DUMP_PATH: http://deployer:8081/state-dump.latest.json
+      ROLLUP_STATE_DUMP_PATH: ${GTON_GENESIS_URL}
       ROLLUP_CLIENT_HTTP: http://dtl:7878
       ROLLUP_BACKEND: 'l1'
       ETH1_CTC_DEPLOYMENT_HEIGHT: 8
@@ -164,7 +143,6 @@ services:
 
   batch_submitter:
     depends_on:
-      - deployer
       - l2geth
     build:
       context: ..
@@ -176,7 +154,7 @@ services:
     environment:
       L1_ETH_RPC: ${L1_RPC_ENDPOINT}
       L2_ETH_RPC: http://l2geth:8545
-      URL: http://deployer:8081/addresses.json
+      URL: ${GTON_ADDRESSES_URL}
       BATCH_SUBMITTER_SEQUENCER_PRIVATE_KEY: ${SEQUENCER_PRIVATE_KEY}
       BATCH_SUBMITTER_PROPOSER_PRIVATE_KEY: ${PROPOSER_PRIVATE_KEY}
       BATCH_SUBMITTER_SEQUENCER_BATCH_TYPE: ${BATCH_SUBMITTER_SEQUENCER_BATCH_TYPE:-zlib}
