--- a/gton/envs/batch-submitter.env
+++ b/gton/envs/batch-submitter.env
@@ -1,5 +1,5 @@
-BUILD_ENV=development
-ETH_NETWORK_NAME=clique
+BUILD_ENV=production
+ETH_NETWORK_NAME=${ETH_NETWORK_NAME}
 
 LOG_LEVEL=debug
 BATCH_SUBMITTER_LOG_LEVEL=debug
@@ -9,12 +9,12 @@ BATCH_SUBMITTER_MAX_L1_TX_SIZE=90000
 BATCH_SUBMITTER_MAX_PLAINTEXT_BATCH_SIZE=120000
 BATCH_SUBMITTER_MIN_STATE_ROOT_ELEMENTS=1000
 BATCH_SUBMITTER_MAX_STATE_ROOT_ELEMENTS=3000
-BATCH_SUBMITTER_MAX_BATCH_SUBMISSION_TIME=0
+BATCH_SUBMITTER_MAX_BATCH_SUBMISSION_TIME=43200s
 BATCH_SUBMITTER_POLL_INTERVAL=500ms
-BATCH_SUBMITTER_NUM_CONFIRMATIONS=1
+BATCH_SUBMITTER_NUM_CONFIRMATIONS=10
 BATCH_SUBMITTER_SAFE_ABORT_NONCE_TOO_LOW_COUNT=3
-BATCH_SUBMITTER_RESUBMISSION_TIMEOUT=1s
-BATCH_SUBMITTER_FINALITY_CONFIRMATIONS=0
+BATCH_SUBMITTER_RESUBMISSION_TIMEOUT=30s
+BATCH_SUBMITTER_FINALITY_CONFIRMATIONS=10
 BATCH_SUBMITTER_RUN_TX_BATCH_SUBMITTER=true
 BATCH_SUBMITTER_RUN_STATE_BATCH_SUBMITTER=true
 BATCH_SUBMITTER_SAFE_MINIMUM_ETHER_BALANCE=0
